# bevy_yarotmg

./: Cargo.toml
src/: collider.rs  editor_camera.rs  entity.rs  health.rs  input.rs  main.rs  player.rs  projectile.rs  projectilepattern.rs  rapier.rs  states.rs  weapon.rs
