[package]
name = "bevyfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy-inspector-egui = "0.23.4"
bevy_ecs_tilemap = "0.12.0"
bevy_rapier2d = {version = "0.25.0", features = ["debug-render-2d"]}

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
